--- a/config/openvpn/default.conf
+++ b/config/openvpn/default.conf
@@ -1,16 +1,27 @@
 client
 dev tun
-proto udp
-remote *PIASERVER* 1194
 resolv-retry infinite
 nobind
 persist-key
 persist-tun
-ca ca.crt
-tls-client
+verb 3
 remote-cert-tls server
-comp-lzo
-verb 1
-reneg-sec 0
-crl-verify crl.pem
+ping 10
+ping-restart 60
+sndbuf 524288
+rcvbuf 524288
+cipher AES-256-CBC
+tls-cipher TLS-DHE-RSA-WITH-AES-256-GCM-SHA384:TLS-DHE-RSA-WITH-AES-256-CBC-SHA
+proto udp
 auth-user-pass pw
+ca ca.crt
+tun-ipv6
+script-security 2
+up /etc/openvpn/update-resolv-conf
+down /etc/openvpn/update-resolv-conf
+fast-io
+remote-random
+remote gb-mnc-103.mullvad.net 1196
+remote gb-mnc-101.mullvad.net 1196
+remote gb-mnc-106.mullvad.net 1196
+remote gb-mnc-102.mullvad.net 1196
